# youtube-to-text-unit

./: README.md
.github/workflows/: ci.yml
argocd/: application.yaml
helm/worker/: Chart.yaml  values.yaml
helm/worker/templates/: deployment.yaml  service.yaml
worker/: Dockerfile  graph.py  main.py  pyproject.toml  queues.py  transcript.py
