[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "prometheus-fastapi-instrumentator==6.1.0",
    "aio-pika==9.4.3",
    "yt-dlp==2026.3.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
