[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "prometheus-fastapi-instrumentator==6.1.0",
    "aio-pika==9.4.3",
    "yt-dlp==2026.3.17",
    "langgraph==1.2.6",
    "langgraph-checkpoint-postgres==3.1.0",
    "langchain-text-splitters==1.1.2",
    "psycopg[binary,pool]==3.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]
